.provarCaches/00D5f000005vwGkEAI/objects/rstk__pocst__c.object
<CustomObject>
    <description>pocst__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pocst_poline__r.rstk__externalid__c</formula>
        <inlineHelpText>This is the formula for determining the External ID of this record, which is not used or shown on any Rootstock pages</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Freight closed variance amount</inlineHelpText>
        <label>pocst_closvarfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Close Variance Labor</inlineHelpText>
        <label>Close Variance, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This the Total Variance for Subcontracted Material on this PO Line</inlineHelpText>
        <label>Close Variance, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Close Variance Fringe Overhead</inlineHelpText>
        <label>Close Variance, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Close Variance Labor Overhead</inlineHelpText>
        <label>Close Variance, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This the Total Variance for Machine Overhead  on this PO Line</inlineHelpText>
        <label>Close Variance, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This the Total Variance for Material Overhead on this PO Line</inlineHelpText>
        <label>Close Variance, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Close Variance for Other Indirect Charges</inlineHelpText>
        <label>pocst_closvarothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Close Variance Subcontract Labor</inlineHelpText>
        <label>Close Variance, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_closvarsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This the Total Variance for Subcontracted Material on this PO Line</inlineHelpText>
        <label>Close Variance, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division associated with</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Po Costs</relationshipLabel>
        <relationshipName>divpocsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Freight</inlineHelpText>
        <label>pocst_dmddolchgoutfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Outside Labor</inlineHelpText>
        <label>Component Deductions, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Outside Material</inlineHelpText>
        <label>Component Deductions, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Overhead Fringe</inlineHelpText>
        <label>Component Deductions, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Overhead Labor</inlineHelpText>
        <label>Component Deductions, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Overhead Machine</inlineHelpText>
        <label>Component Deductions, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Overhead Material</inlineHelpText>
        <label>Component Deductions, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Other Indirect Costs</inlineHelpText>
        <label>pocst_dmddolchgoutothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Demand Amount charged out for Subcontracted Labor</inlineHelpText>
        <label>Component Deductions, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmddolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>PO Component Demand Charged Out Subcontract Material</inlineHelpText>
        <label>Component Deductions, Subcontract Mtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Freight for  this PO Line Item</inlineHelpText>
        <label>pocst_dmdtotcstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Labor for this PO Line</inlineHelpText>
        <label>Component Cost, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of  Material for this PO Line</inlineHelpText>
        <label>Component Cost, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Overhead Fringe for this PO Line</inlineHelpText>
        <label>Component Cost, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Overhead Labor for this PO Line</inlineHelpText>
        <label>Component Cost, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Overhead Machine for this PO Line</inlineHelpText>
        <label>Component Cost, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Overhead Material for this PO Line</inlineHelpText>
        <label>Component Cost, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>PO Component Demand Total Other Landed Cost</inlineHelpText>
        <label>pocst_dmdtotcstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Subcontracted Labor for this PO Line</inlineHelpText>
        <label>Component Cost, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdtotcstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total extended cost of Subcontracted Material for this PO Line</inlineHelpText>
        <label>Component Cost, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdvarcstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>PO Demand Freight Cost Variance</inlineHelpText>
        <label>pocst_dmdvarcstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_dmdvarcstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>PO Demand Other Landed Cost Variance</inlineHelpText>
        <label>pocst_dmdvarcstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_lne__c</fullName>
        <inlineHelpText>This is the PO Line Number</inlineHelpText>
        <label>Line Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_ordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Purchase Order number for this PO Cost line.</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>PO Costs</relationshipLabel>
        <relationshipName>Po_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_poline__c</fullName>
        <inlineHelpText>This is the PO Line Number</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Po Costs</relationshipLabel>
        <relationshipName>pocsts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_povaracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the PO Variance account</inlineHelpText>
        <label>PPV Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Po Costs (PPV Account (Obsolete))</relationshipLabel>
        <relationshipName>Po_Costs1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This  is the Site associated with this PO Cost Line</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Po Costs</relationshipLabel>
        <relationshipName>Po_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_subvaracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Subledger Account that subcontract WIP variances will be debited to upon PO Close (if any).</inlineHelpText>
        <label>Sub WIP Variance Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Po Costs (Sub WIP Variance Account (Obsolete))</relationshipLabel>
        <relationshipName>Po_Costs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_subwipacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Subcontract WIP Account that PO Component issue costs will be debited to.</inlineHelpText>
        <label>Sub WIP Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Po Costs (Sub WIP Account (Obsolete))</relationshipLabel>
        <relationshipName>Po_Costs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Freight Costs</inlineHelpText>
        <label>supdolchgoutfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for  Labor cost</inlineHelpText>
        <label>Order Deductions, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Material cost</inlineHelpText>
        <label>Order Deductions, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Overhead Fringe cost</inlineHelpText>
        <label>Order Deductions, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Overhead Labor cost</inlineHelpText>
        <label>Order Deductions, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Overhead Machine cost</inlineHelpText>
        <label>Order Deductions, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Overhead Material cost</inlineHelpText>
        <label>Order Deductions, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Other Indirect Costs</inlineHelpText>
        <label>supdolchgoutothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Subcontracted Labor</inlineHelpText>
        <label>Order Deductions, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_supdolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Supply  Amount charged out for Subcontracted Material</inlineHelpText>
        <label>Order Deductions, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Freight Cost</inlineHelpText>
        <label>pocst_suptotcstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Labor cost</inlineHelpText>
        <label>Order Cost, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Material Cost</inlineHelpText>
        <label>Order Cost, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Overhead Fringe Cost</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Overhead Labor Cost</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>PO Supply Total Overhead Machine Cost</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Overhead Material Cost</inlineHelpText>
        <label>Order Cost, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Other Indirect Costs</inlineHelpText>
        <label>pocst_suptotcstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Subcontracted Labor Cost</inlineHelpText>
        <label>Order Cost, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_suptotcstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Extended Supply  Amount charged out for  Subcontracted Material Cost</inlineHelpText>
        <label>Order Cost, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocst_tempid__c</fullName>
        <inlineHelpText>PO Cost UI Temporary field</inlineHelpText>
        <label>temp id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Cost</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__POCST</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocst_div__c</columns>
        <columns>rstk__pocst_ordno__c</columns>
        <columns>rstk__pocst_lne__c</columns>
        <columns>rstk__pocst_poline__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__pocst_suptotcstfrght__c</columns>
        <columns>rstk__pocst_suptotcstothlnd__c</columns>
        <filterScope>Everything</filterScope>
        <label>POCST</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__POCST_AV_Divs</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocst_div__c</columns>
        <columns>rstk__pocst_ordno__c</columns>
        <columns>rstk__pocst_lne__c</columns>
        <columns>rstk__pocst_poline__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__pocst_div__c</field>
            <operation>contains</operation>
            <value>AV-</value>
        </filters>
        <label>POCST AV Divs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>